@@ -1,0 +1,9 @@
+var assert = buster.assertions.assert;
+
+buster.testCase("INTER-Mediator Element Test", {
+    "IMLibElement.setValueToIMNode() should return false without TypeError (curVal.replace is not a function)": function () {
+        var tempElement = document.createElement("textarea");
+        assert.equals(IMLibElement.setValueToIMNode(tempElement, "textNode", null, true), false);
+        assert.equals(IMLibElement.setValueToIMNode(tempElement, "textNode", false, true), false);
+    }
+});
